[tool.poetry]
name = "FPVision"
version = "0.1.0"
description = ""
authors = ["Lewis <lewis.leighfield@tuta.io>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.14"
coverage = "^5.1"
codecov = "^2.1.4"
pillow = "^7.1.2"
django-allauth = "^0.42.0"
stripe = "^2.48.0"
django-environ = "^0.4.5"
django-countries = "^6.1.2"
dj_database_url = "^0.5.0"
psycopg2-binary = "^2.8.5"
gunicorn = "^20.0.4"
boto3 = "^1.14.16"
django-storages = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
